# Card-Server-ArangoDB-based-

./: Cargo.toml  README.md  querys.graphql  schema.json  set_env.sh
app/: Cargo.toml
app/src/: main.rs
crates/gql-types/: Cargo.toml
crates/gql-types/src/types/: candidate.rs  card.rs  collection.rs  enterprise.rs  mod.rs  user.rs
crates/ogm/: Cargo.toml
crates/ogm-handler/: .gitignore  Cargo.toml
crates/ogm-handler/src/: lib.rs
crates/ogm-handler/src/gql/: mod.rs  querys.rs
crates/ogm-handler/src/gql/mutation/: mod.rs  register_new_user.graphql  register_new_user.rs
crates/ogm-handler/src/gql/query/: get_user_by_email_or_username.rs  get_user_password_by_email_or_username.graphql  get_user_password_by_username.graphql  get_user_password_by_username.rs  mod.rs
crates/ogm/src/: lib.rs
crates/ogm/src/models/: collection.rs  mod.rs  user.rs
crates/ogm/src/services/: collections.rs  mod.rs  users.rs
src/: lib.rs
src/config/db/: schema.yaml
src/mutation/: mod.rs
src/mutation/user/: mod.rs
src/query/: mod.rs
src/query/user/: mod.rs
src/resolvers/: mod.rs
src/resolvers/collections/: mod.rs
src/resolvers/collections/mutations/: create_collection.rs  mod.rs
src/resolvers/collections/queries/: mod.rs  search_collection_by_name.rs
src/resolvers/users/: mod.rs
src/resolvers/users/mutations/: mod.rs  register.rs
src/resolvers/users/queries/: log_in.rs  mod.rs
