[package]
name = "card-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["crates/*", "app"]
default-members = ["app"]

[dependencies]
gql-types = {path = "crates/gql-types"}
ogm-handler = { path= "crates/ogm-handler" }
async-graphql = "4.0.16"
pbkdf2 = "0.11.0"
rand_core = { version = "0.6", features = ["std"] }
ron = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.87"}