[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
surf = "2.3.2"
async-std = {version = "1.12.0", features = ["attributes"]}
serde = { version = "1.0.147", features = ["derive"] }
femme = "2.2.1"
async-graphql = "4.0.16"
async-graphql-tide = "4.0.16"
card-server = {path = ".."}