[package]
name = "gql-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "4.0.16"
chrono = "0.4.22"
uuid = "1.2.1"
regex = "1.6.0"
japhonex = "0.1.1"
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.87"
url = "2.3.1"
jsonwebtoken = "8.1.1"