[package]
name = "ogm-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
femme = "2.2.1"
log = "0.4.17"
graphql_client = {git = "https://github.com/graphql-rust/graphql-client"}
serde = {version = "1.0.147", features =["derive"]}
async-std = "1.12.0"
surf = "2.3.2"
serde_json = "1.0.87"
