[package]
name = "ogm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aragog = {git = "https://gitlab.com/qonfucius/aragog"}
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.36"
async-graphql = "4.0.15"
async-graphql-axum = "4.0.15"
dotenv = "0.15.0"